Added Simple Css

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe Book</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <img src="./images/chef.png" alt="Chef image">
+    <body id="indexbody">
+        <h1 class="textcenter"><u>Odin Recipes</u></h1>
+        <img class="images center" src="./images/chef.png" alt="Chef image">
+        <div class="listcenter">
         <ul>
+            <h3><u>Recipes</u></h3>
             <li><a href="./recipes/pizza.html">Pizza!</a></li>
             <li><a href="./recipes/bread.html">Fresh Baked Bread</a></li>
             <li><a href="./recipes/cookie.html">Cookies</a></li>
             <li><a href="./recipes/fries.html">French Fries</a></li>
         </ul>
+        </div>
     </body>
 </html>
