--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -3,21 +3,25 @@
     <head>
         <meta charset="utf-8">
         <title>Bread Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Rustic Bread</h1>
-        <img src="../images/breadimg.png" alt="Bread image">
-        <h2>Ingredients</h2>
+        <h1 class="subpageheaders">Rustic Bread</h1>
+        <img class="images" src="../images/breadimg.png" alt="Bread image">
+        <div>
         <ul>
+            <h2><u>Ingredients</u></h2>
             <li>Flour</li>
             <li>Water</li>
             <li>Yeast</li>
             <li>Salt</li>
             <li>Sugar</li>
         </ul>
-        <h2>Steps</h2>
+        </div>
+        <div>
         <ol>
+            <h2><u>Steps</u></h2>
             <li>Combine all ingredients in mixing bowl.</li>
             <li>Stir until combined and dough ball forms.</li>
             <li>Put dough on floured surface and knead for 6 minutes.</li>
@@ -28,6 +32,7 @@
             <li>Bake the bread and allow the bread to cool down before cutting</li>
             <p><strong>Enjoy!</strong></p>
         </ol>
-        <a href="../index.html">Home</a>
+        </div>
+        <a class="homebutton" href="../index.html">Home</a>
     </body>
 </html>
