--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Cookie Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>COOKIES!</h1>
-        <img src="../images/cookieimg.png" alt="Cookie image">
-        <h2>Ingredients</h2>
+        <h1 class="subpageheaders">COOKIES!</h1>
+        <img class="images" style="padding-left: 10px;" src="../images/cookieimg.png" alt="Cookie image">
+        <div>
         <ul>
+            <h2><u>Ingredients</u></h2>
             <li>Flour</li>
             <li>Baking soda</li>
             <li>Salt</li>
@@ -20,8 +22,10 @@
             <li>Vanilla</li>
             <li>Chocolate Chips</li>
         </ul>
-        <h2>Steps</h2>
+        </div>
+        <div>
         <ol>
+            <h2><u>Steps</u></h2>
             <li>In one bowl combine flour, baking soda, and salt.</li>
             <li>In another bowl combine soften butter, sugars and mix until fluffy.</li>
             <li>Beat in the egg and vanilla to the bowl with the butter and sugars.</li>
@@ -30,7 +34,7 @@
             <li>Bake and then cool completely.</li>
             <p><strong>Enjoy!</strong></p>
         </ol>
-        <h2>Steps</h2>
-        <a href="../index.html">Home</a>
+        </div>
+        <a class="homebutton" href="../index.html">Home</a>
     </body>
 </html>
