--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,29 +3,38 @@
     <head>
         <meta charset="utf-8">
         <title>Pizza Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
-
     <body>
-        <h1>Delicious Pizza!</h1>
-        <img src="../images/pizzaimg.png" alt="Pizza image">
-        <h2>Ingredients</h2>
-        <h4>Dough</h4>
+        <h1 class="subpageheaders">Delicious Pizza!</h1>
+        <img class="images" style="transform:rotate(20deg)" src="../images/pizzaimg.png" alt="Pizza image">
+        <div style="padding-bottom:-50px;">
         <ul>
+            <h2><u>Ingredients</u></h2>
+            <h4>Dough</h4>
+            <div style="margin-top:-20px">
             <li>Flour</li>
             <li>Salt</li>
             <li>Yeast</li>
             <li>Oil</li>
             <li>Water</li>
             <li>Sugar</li>
+        </div>
         </ul>
-        <h4>Toppings</h4>
+        </div>
+        <div style="margin-top:-40px;">
         <ul>
+            <h4>Toppings</h4>
+            <div style="margin-top:-20px">
             <li>Tomato sauce</li>
             <li>Cheese</li>
             <li>Basil</li>
+            </div>
         </ul>
-        <h2>Steps</h2>
+        </div>
+        <div>
         <ol>
+            <h2><u>Steps</u></h2>
             <li>Combine warm water, yeast, and sugar into a mixing bowl to allow yeast to bloom.</li>
             <li>Once yeast visibly is bloomed add flour, salt, and oil to mixing bowl.</li>
             <li>Stir mixture until a ball of dough is formed.</li>
@@ -35,6 +44,7 @@
             <li>Cook in pizza oven high heat, making sure to rotate and evenly cook.</li>
             <p><strong>Enjoy!</strong></p>
         </ol>
-        <a href="../index.html">Home</a>
+        </div>
+        <a class="homebutton" href="../index.html">Home</a>
     </body>
 </html>
