--- a/recipes/fries.html
+++ b/recipes/fries.html
@@ -3,19 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>French Fries Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Crispy French Fries</h1>
-        <img src="../images/friesimg.png" alt="French fries image">
-        <h2>Ingredients</h2>
+        <h1 class="subpageheaders">Crispy French Fries</h1>
+        <img class="images" src="../images/friesimg.png" alt="French fries image">
+        <div>
         <ul>
+            <h2><u>Ingredients</u></h2>
             <li>Potatoes</li>
             <li>Salt</li>
             <li>Oil</li>
         </ul>
-        <h2>Steps</h2>
+        </div>
+        <div>
         <ol>
+            <h2><u>Steps</u></h2>
             <li>Cut potatoes into desired french fry shape.</li>
             <li>Parboil potatoes in salted water.</li>
             <li>Pat potatoes dry.</li>
@@ -23,6 +27,7 @@
             <li>Place fries on plate with paper towel to absorb excess oil and season with salt while hot</li>
             <p><strong>Enjoy!</strong></p>
         </ol>
-        <a href="../index.html">Home</a>
+        </div>
+        <a class="homebutton" href="../index.html">Home</a>
     </body>
 </html>
