--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
         <h1 class="textcenter"><u>Odin Recipes</u></h1>
         <img class="images center" src="./images/chef.png" alt="Chef image">
         <div class="listcenter">
-        <ul>
-            <h3><u>Recipes</u></h3>
-            <li><a href="./recipes/pizza.html">Pizza!</a></li>
-            <li><a href="./recipes/bread.html">Fresh Baked Bread</a></li>
-            <li><a href="./recipes/cookie.html">Cookies</a></li>
-            <li><a href="./recipes/fries.html">French Fries</a></li>
-        </ul>
+            <h3 id="recipes"><u>Recipes</u></h3>
+            <a href="./recipes/pizza.html">Pizza!</a>
+            <a href="./recipes/bread.html">Fresh Baked Bread</a>
+            <a href="./recipes/cookie.html">Cookies</a>
+            <a href="./recipes/fries.html">French Fries</a>
         </div>
     </body>
 </html>
