--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -45,6 +45,8 @@
             <p><strong>Enjoy!</strong></p>
         </ol>
         </div>
-        <a class="homebutton" href="../index.html">Home</a>
+        <div class="homeposition">
+            <a class="homebutton" href="../index.html">Home</a>
+        </div>
     </body>
 </html>
