--- a/recipes/bread.html
+++ b/recipes/bread.html
@@ -33,6 +33,8 @@
             <p><strong>Enjoy!</strong></p>
         </ol>
         </div>
-        <a class="homebutton" href="../index.html">Home</a>
+        <div class="homeposition">
+            <a class="homebutton" href="../index.html">Home</a>
+        </div>
     </body>
 </html>
