--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -35,6 +35,8 @@
             <p><strong>Enjoy!</strong></p>
         </ol>
         </div>
-        <a class="homebutton" href="../index.html">Home</a>
+        <div class="homeposition">
+            <a class="homebutton" href="../index.html">Home</a>
+        </div>
     </body>
 </html>
