--- a/recipes/fries.html
+++ b/recipes/fries.html
@@ -28,6 +28,8 @@
             <p><strong>Enjoy!</strong></p>
         </ol>
         </div>
-        <a class="homebutton" href="../index.html">Home</a>
+        <div class="homeposition">
+            <a class="homebutton" href="../index.html">Home</a>
+        </div>
     </body>
 </html>
