Testing Out Flexbox
Made edits to homepage with flexbox on the anchor elements

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <body id="indexbody">
         <h1 class="textcenter"><u>Odin Recipes</u></h1>
         <img class="images center" src="./images/chef.png" alt="Chef image">
+        <h3 id="recipes"><u>Recipes</u></h3>
         <div class="listcenter">
-            <h3 id="recipes"><u>Recipes</u></h3>
-            <a href="./recipes/pizza.html">Pizza!</a>
+            <a style="margin-left: auto;" href="./recipes/pizza.html">Pizza!</a>
             <a href="./recipes/bread.html">Fresh Baked Bread</a>
             <a href="./recipes/cookie.html">Cookies</a>
-            <a href="./recipes/fries.html">French Fries</a>
+            <a style="margin-right: auto;" href="./recipes/fries.html">French Fries</a>
         </div>
     </body>
 </html>
